update training for L2, loss computation for pEF data

--- a/code_results_evaluation/map_HFpEF_to_latent.ipynb
+++ b/code_results_evaluation/map_HFpEF_to_latent.ipynb
@@ -6,83 +6,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add path with autoencoding code\n",
+    "import sys\n",
+    "# caution: path[0] is reserved for script path (or '' in REPL)\n",
+    "sys.path.insert(1, '../code_autoencoding')\n",
+    "\n",
+    "#Torch and utilities\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from cmapPy.pandasGEXpress.parse import parse\n",
-    "import data_loader as dl\n",
+    "import torch.nn.functional as F\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "from torch.autograd import Variable\n",
-    "import torch.nn.functional as F\n",
+    "\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import glob\n",
+    "import re\n",
     "\n",
-    "\n",
+    "from cmapPy.pandasGEXpress.parse import parse\n",
     "import data_loader as dl\n",
     "import autoencoder\n",
-    "import glob"
+    "import trainer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['trained_model_params/modZ_input\\\\0.00233913_leakyReLu_960_1400_model_best.pth',\n",
-       " 'trained_model_params/modZ_input\\\\0.00236055_leakyReLu_960_1200_model_best.pth',\n",
-       " 'trained_model_params/modZ_input\\\\0.00236989_leakyReLu_960_1300_model_best.pth',\n",
-       " 'trained_model_params/modZ_input\\\\0.00237588_leakyReLu_960_1000_model_best.pth',\n",
-       " 'trained_model_params/modZ_input\\\\0.00238399_leakyReLu_960_1100_model_best.pth',\n",
-       " 'trained_model_params/modZ_input\\\\0.09155359_leakyReLu_960_700_model_best.pth']"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#param_path = \"trained_model_params/modZ_input/0.00237588_leakyReLu_960_1000_model_best.pth\"\n",
-    "files"
+    "data_path = \"../data/HF_LM_genes_counts.csv\"\n",
+    "pEF_df = pd.read_csv(data_path)\n",
+    "\n",
+    "vec_keys = [k for k in pEF_df.columns if re.search('X\\d{3,5}', k)]\n",
+    "\n",
+    "pEF_vectors = dl.vectorize(pEF_df.iloc[:, pEF_df.columns.isin(vec_keys)], scale_min_max=True, scale_log2_1=False)\n",
+    "\n",
+    "#pEF_vectors = {k : np.array(pEF_df[k]) for k in vec_keys}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pEF_vectors_torch = dl.TorchVectors(pEF_vectors)\n",
+    "eval_loader = DataLoader(pEF_vectors_torch, batch_size=1, pin_memory=True, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trained_model_params/modZ_input\\0.00233913_leakyReLu_960_1400_model_best.pth\n",
-      "tensor(0.0002, dtype=torch.float64, grad_fn=<MseLossBackward0>)\n",
-      "trained_model_params/modZ_input\\0.00236055_leakyReLu_960_1200_model_best.pth\n",
-      "tensor(0.0004, dtype=torch.float64, grad_fn=<MseLossBackward0>)\n",
-      "trained_model_params/modZ_input\\0.00236989_leakyReLu_960_1300_model_best.pth\n",
-      "tensor(0.0004, dtype=torch.float64, grad_fn=<MseLossBackward0>)\n",
-      "trained_model_params/modZ_input\\0.00237588_leakyReLu_960_1000_model_best.pth\n",
-      "tensor(0.0003, dtype=torch.float64, grad_fn=<MseLossBackward0>)\n",
-      "trained_model_params/modZ_input\\0.00238399_leakyReLu_960_1100_model_best - Copy.pth\n",
-      "tensor(0.0002, dtype=torch.float64, grad_fn=<MseLossBackward0>)\n",
-      "trained_model_params/modZ_input\\0.00238399_leakyReLu_960_1100_model_best.pth\n",
-      "tensor(0.0002, dtype=torch.float64, grad_fn=<MseLossBackward0>)\n",
-      "trained_model_params/modZ_input\\0.09155359_leakyReLu_960_700_model_best.pth\n",
-      "tensor(6.0070, dtype=torch.float64, grad_fn=<MseLossBackward0>)\n"
+      "0.0008806358604013677\n"
      ]
     }
    ],
    "source": [
-    "data_path = \"input_data/HF_LM_genes_DEG_data.csv\"\n",
-    "pEF_vector_in = np.array(pd.read_csv(data_path).z_score_PEF)\n",
-    "pEF_vector_in = torch.from_numpy(pEF_vector_in).double()\n",
-    "\n",
-    "files = glob.glob(\"trained_model_params/modZ_input/*.pth\")\n",
+    "#model_param_files = glob.glob(\"trained_model_params/modZ_input/*.pth\")\n",
+    "model_param_files = ['../trained_model_parameters/3.46e-06_counts_leakyReLu_960_1100_model_best.pth']\n",
     "criterion = nn.MSELoss()\n",
     "\n",
-    "for f in files:\n",
+    "for f in model_param_files:\n",
     "    \n",
     "    # Load parameters from training\n",
     "    params = torch.load(f)\n",
@@ -92,44 +84,31 @@
     "    \n",
     "    AE = autoencoder.Autoencoder(input_size,latent_size)\n",
     "    AE.set_weights(params)\n",
-    "    AE.double()\n",
-    "    AE.cpu()\n",
-    "\n",
-    "    pEF_vector_out = AE(pEF_vector_in)\n",
-    "\n",
-    "    loss = criterion(pEF_vector_in, pEF_vector_out)\n",
-    "    print(f)\n",
-    "    print(loss)\n",
-    "    \n"
+    "    #AE.double()\n",
+    "    AE.cuda()\n",
+    "    \n",
+    "    loss = trainer.val_step(AE, eval_loader, prt = False)\n",
+    "    print(loss)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1100"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "params = torch.load(\"0.00189921_drugsOnly_leakyReLu_960_1100_model_best.pth\")\n",
-    "# Get the dimensions of the first layer and the weights\n",
-    "latent_size, input_size = params['state_dict']['net.0.weight'].shape\n",
-    "weights_encode = torch.nn.Parameter(params['state_dict']['net.0.weight'])\n",
-    "\n",
-    "# Initialize an encoding layer, apply weights\n",
-    "to_latent_nn = nn.Linear(input_size, latent_size, bias=False)\n",
-    "to_latent_nn.weight = weights_encode\n",
-    "to_latent_nn.double()\n",
-    "to_latent_nn.eval()\n",
-    "\n",
-    "pEF_vector_latent = to_latent_nn(pEF_vector_in)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.DataFrame(pEF_vector_latent.detach().numpy(), columns = ['pEF_vector']).to_csv('HFpEF_latent_vector.csv', index = False)"
+    "latent_size"
    ]
   },
   {
