subtract DMSO vector

--- a/code_results_evaluation/alignment_assessment_counts.ipynb
+++ b/code_results_evaluation/alignment_assessment_counts.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7dff6ac9",
+   "execution_count": 85,
+   "id": "7ccd9d69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,18 @@
     "from numpy.linalg import norm\n",
     "\n",
     "import pandas as pd\n",
+    "import itertools\n",
+    "from itertools import combinations\n",
+    "\n",
     "import data_loader as dl\n",
-    "import itertools"
+    "\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ffa965ea",
+   "execution_count": 86,
+   "id": "fe0e320b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ace0bdeb",
+   "id": "4525b26f",
    "metadata": {},
    "source": [
     "#### Read in both the data and meta data for LINCS level 2"
@@ -53,13 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "46c49041",
+   "execution_count": 87,
+   "id": "69160e16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-87-c96dad1ebba4>:7: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  meta_data = pd.read_csv(meta_data_path, sep = '\\t')\n"
+     ]
+    }
+   ],
    "source": [
     "data_path = \"../data/shared_landmark_counts_vecs.gctx_n100000x960.gct\"\n",
     "lincs_data = dl.load_CMap(data_path)\n",
+    "#lincs_data = lincs_data.iloc[:, 25000:50000]\n",
     "lincs_vectors = dict(dl.vectorize(lincs_data))\n",
     "\n",
     "meta_data_path  = \"../meta_data/GSE92742_Broad_LINCS_inst_info.txt\"\n",
@@ -68,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9bd05b9",
+   "id": "85ec1ca3",
    "metadata": {},
    "source": [
     "#### Remove meta data for which there is no reponse in the LINCS data "
@@ -76,8 +90,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a71f57d8",
+   "execution_count": 88,
+   "id": "3b9697f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fc59d90",
+   "id": "1e7a210e",
    "metadata": {},
    "source": [
     "#### Get the vector IDs (inst_id's) corresponding to each pertubation-cell combination"
@@ -94,331 +108,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b047af32",
+   "execution_count": 89,
+   "id": "adbef7b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "pert_cell_combs = itertools.product(set(meta_data.cell_id), set(meta_data.pert_iname))\n",
-    "pert_cell_combs = list(zip(meta_data.pert_iname, meta_data.cell_id))\n",
-    "vector_ids = dict()\n",
-    "\n",
+    "pert_cell_combs = list(set(zip(meta_data.pert_iname, meta_data.cell_id)))\n",
+    "vector_ids = dict()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adb4ff81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for c in pert_cell_combs:\n",
     "    vector_ids[c] = meta_data.loc[(meta_data['pert_iname'] == c[0]) & (meta_data['cell_id'] == c[1])]['inst_id']"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5cff095a",
+   "id": "f28a9342",
    "metadata": {},
    "source": [
-    "#### Compute the mean vector for each pertubation-cell combination. This is the average response for a given cell type and drug in the native space"
+    "#### Compute the mean vector for each pertubation-cell combination. This is the average response for a given cell type and drug in the native space.  Store the mean response to DMSO separately."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "513fa8f7",
+   "execution_count": null,
+   "id": "bb5268d7",
    "metadata": {},
    "outputs": [],
    "source": [
     "pert_cell_mean_vectors = dict()\n",
+    "DMSO_cell_mean_vectors = dict()\n",
     "\n",
     "for k, v in vector_ids.items():\n",
+    "    \n",
     "    vectors = [lincs_vectors[inst_id] for inst_id in v]\n",
-    "    pert_cell_mean_vectors[k] = np.mean(vectors, axis = 0)"
+    "    pert_cell_mean_vectors[k] = np.mean(vectors, axis = 0)\n",
+    "    if(k[0] == 'DMSO'):\n",
+    "        DMSO_cell_mean_vectors[k[1]] = np.mean(vectors, axis = 0)\n",
+    "        \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1ef37ffd",
+   "id": "741b95c8",
    "metadata": {},
    "source": [
-    "#### For each vector, get the cosine similarity between the mean responses for each cell"
+    "#### Stubtract the DMSO vector from everything for each cell. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "5e9c43ec",
+   "execution_count": null,
+   "id": "acc8e656",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "for k, v in pert_cell_mean_vectors.items():\n",
+    "    pert_cell_mean_vectors[k] = v - DMSO_cell_mean_vectors[k[1]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d0e2fdb",
+   "metadata": {},
+   "source": [
+    "#### For each perturbation, get the cosine similarity between the mean responses for each cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7026faea",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "pert_cos_sims = dict()\n",
     "\n",
@@ -434,21 +204,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "d27de08f",
+   "execution_count": null,
+   "id": "69b25fe6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9630696"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "pert_cos_sims"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5690fdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(pert_cos_sims.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb2bcfb7",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
