attempt with HF genes augmenting data. poor loss on HF data

--- a/code_results_evaluation/map_HFpEF_to_latent.ipynb
+++ b/code_results_evaluation/map_HFpEF_to_latent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +41,14 @@
     "\n",
     "vec_keys = [k for k in pEF_df.columns if re.search('X\\d{3,5}', k)]\n",
     "\n",
-    "pEF_vectors = dl.vectorize(pEF_df.iloc[:, pEF_df.columns.isin(vec_keys)], scale_min_max=True, scale_log2_1=False)\n",
+    "pEF_vectors = dl.vectorize(pEF_df.iloc[:, pEF_df.columns.isin(vec_keys)], scale_log2_1 = True )\n",
     "\n",
     "#pEF_vectors = {k : np.array(pEF_df[k]) for k in vec_keys}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,20 +58,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0008806358604013677\n"
+      "../trained_model_parameters/leakyReLu/3.35e-06_withHF_counts150epoch_leakyReLu_962_1024_model_best.pth\n",
+      "0.0012213991544938283\n"
      ]
     }
    ],
    "source": [
-    "#model_param_files = glob.glob(\"trained_model_params/modZ_input/*.pth\")\n",
-    "model_param_files = ['../trained_model_parameters/3.46e-06_counts_leakyReLu_960_1100_model_best.pth']\n",
+    "model_param_files = glob.glob(\"../trained_model_parameters/leakyReLu/3.35e-06_withHF_counts150epoch_leakyReLu_962_1024_model_best.pth\")\n",
+    "#model_param_files = ['../trained_model_parameters/leakyReLu/1.36e-06_counts150epoch_leakyReLu_960_1100_model_best.pth']\n",
     "criterion = nn.MSELoss()\n",
     "\n",
     "for f in model_param_files:\n",
@@ -88,7 +89,9 @@
     "    AE.cuda()\n",
     "    \n",
     "    loss = trainer.val_step(AE, eval_loader, prt = False)\n",
-    "    print(loss)\n"
+    "    print(f)\n",
+    "    print(loss)\n",
+    "    \n"
    ]
   },
   {
